--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -15,28 +15,30 @@
     </ul>
   
   <!--Display this at the end of navbar when user is logged in (loggedIn() returns true on a token in localStorage)-->
+  <div class="container">
   <div class="login-container pull-right">
-  <div *ngIf="loggedIn()" class="dropdown pull-right" dropdown>
-      <a class="dropdown-toggle text-light" dropdownToggle>
-        Welcome {{authService.decodedToken.unique_name | titlecase}}
-      </a>
-  
-      <div class="dropdown-menu mt-3" *dropdownMenu>
-        <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit Profile</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" (click)="logOut()"><i class="fa fa-sign-out"></i>Log out</a>
+    <div *ngIf="loggedIn()" class="dropdown" dropdown>
+        <a class="dropdown-toggle text-light" dropdownToggle>
+          Welcome {{authService.decodedToken.unique_name | titlecase}}
+        </a>
+    
+        <div class="dropdown-menu mt-3" *dropdownMenu>
+          <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit Profile</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" (click)="logOut()"><i class="fa fa-sign-out"></i>Log out</a>
+        </div>
       </div>
-    </div>
-  
-  <!--Display this at the end of the navbar when user is not logged in (loggedIn() returns false on having a token in localStorage) -->
+    
+    <!--Display this at the end of the navbar when user is not logged in (loggedIn() returns false on having a token in localStorage) -->
 
-  <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0 pull-right" (ngSubmit)="login()">
-      <input class="form-control mr-sm-2" type="text" name="username" 
-      placeholder="Username" required [(ngModel)]="model.username"/>
-      <input class="form-control mr-sm-2" type="password" name="password" 
-      placeholder="Password" required [(ngModel)]="model.password"/>
-      <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
-    </form>
+    <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+        <input class="form-control mr-sm-2" type="text" name="username" 
+        placeholder="Username" required [(ngModel)]="model.username"/>
+        <input class="form-control mr-sm-2" type="password" name="password" 
+        placeholder="Password" required [(ngModel)]="model.password"/>
+        <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+      </form>
+    </div>
   </div>
-</div>
+  </div>
 </nav>
