Edit Photo Component Added

--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -18,7 +18,10 @@
   <div class="container">
   <div class="login-container pull-right">
     <div *ngIf="loggedIn()" class="dropdown" dropdown>
-        <a class="dropdown-toggle text-light" dropdownToggle>
+        <span class="mr-1">
+          <img src="{{photoUrl}}" alts="">
+        </span>
+      <a class="dropdown-toggle text-light" dropdownToggle>
           Welcome {{authService.decodedToken.unique_name | titlecase}}
         </a>
     
