--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -12,9 +12,10 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
+        <!--NOTE: Added mx-auto for automatic recentering, might cause problems-->
         <img
-          class="card-img-top img-thumbnail"
-          src="{{ user.photoUrl }}"
+          class="card-img-top img-thumbnail mx-auto"
+          src="{{ photoUrl }}"
           alt="{{ user.knownAs }}"
         />
         <div class="card-body">
@@ -86,7 +87,8 @@
             </form>
           </tab>
           <tab heading="Edit Photos">
-            <p>Photo edit will go here</p>
+            <app-photo-editor [photos]="user.photos" 
+            (getMemberPhotoChange)="updateMainPhoto($event)"></app-photo-editor>
           </tab>
         </tabset>
       </div>
