--- a/DatingApp-SPA/src/app/nav/nav.component.css
+++ b/DatingApp-SPA/src/app/nav/nav.component.css
@@ -5,3 +5,9 @@
 .login-container{
     float: right !important;
 }
+
+img {
+    max-height: 50px;
+    border: 2px solid white;
+    display: inline;
+}
